<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/atvd_1_ex2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etValorB"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="208dp"
        android:ems="10"
        android:hint="@string/vB"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tvResX1"
        app:layout_constraintEnd_toEndOf="@+id/etValorA"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etValorA"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/vA"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ident" />

    <EditText
        android:id="@+id/etValorC"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/vC"
        android:importantForAutofill="no"
        android:inputType="numberSigned|numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@+id/etValorB"
        app:layout_constraintTop_toBottomOf="@+id/etValorB" />

    <Button
        android:id="@+id/bntCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorC" />

    <TextView
        android:id="@+id/tvResX2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tvResDelta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResX1" />

    <TextView
        android:id="@+id/tvResX1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        app:layout_constraintBottom_toTopOf="@+id/tvResX2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValorB" />

    <TextView
        android:id="@+id/tvResDelta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="133dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResX2" />

    <TextView
        android:id="@+id/Ident"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/ident"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>